--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 #board {
     display: grid;
-    grid-template-columns: repeat(8, 50px);
-    grid-template-rows: repeat(8, 50px);
+    grid-template-columns: repeat(8, 1fr); /* Use fractional units to make the columns equally spaced */
+    grid-template-rows: repeat(8, 1fr); /* Use fractional units to make the rows equally spaced */
     border: 2px solid black;
+    width: 400px; /* Set a fixed width for the board */
+    height: 400px; /* Set a fixed height for the board */
 }
 
 .square {
-    width: 50px;
-    height: 50px;
+    width: 100%; /* Make each square take up the entire space of its grid cell */
+    height: 100%; /* Make each square take up the entire space of its grid cell */
     border: 1px solid black;
     box-sizing: border-box;
 }
+
 
 .red-piece {
     width: 40px;
